--- a/web/package.json
+++ b/web/package.json
@@ -19,9 +19,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^22.15.15",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.4.1",
+    "typescript": "^5.8.3",
     "vite": "^5.4.18"
   }
 }
